--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link rel="icon" type="image/png" href="./assets/imagenes/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <script src="./js/mysql.js" defer></script>
-    <script src="./js/script.js" defer></script>
     <script src="./js/jquery.js"></script>
+    <script src="./js/main.js" defer></script>
+    <script src="./js/idiomas.js" defer></script>
+    <script src="./js/script.js" defer></script>
 </head>
-<body onload="cargarMenu()">
+<body onload="cargarMenu(window.idiomas.espanol)">
     <main id="pantalla_menu"></main>
     <main id="juego" class="display-juego" style="display: none;"></main>
 </body>
