--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <script src="./js/idiomas.js" defer></script>
     <script src="./js/script.js" defer></script>
 </head>
-<body onload="cargarMenu(window.idiomas.espanol)">
+<body onload="cargarMenu()">
     <main id="pantalla_menu"></main>
     <main id="juego" class="display-juego" style="display: none;"></main>
+    <form action="">
+        
+    </form>
 </body>
 </html>
