--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>- DOMINÓ -</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/estilo.css">
+    <link rel="stylesheet" href="./css/tablero.css">
+    <link rel="stylesheet" href="./css/guardar.css">
+    <link rel="stylesheet" href="./css/modoDeJuego.css">
+    <link rel="stylesheet" href="./css/menu.css">
+    <link rel="stylesheet" href="./css/fichas.css">
     <link rel="icon" type="image/png" href="./assets/imagenes/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
-    <script src="./js/mysql.js" defer></script>
     <script src="./js/jquery.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.3/jquery-ui.js"></script>
+    <script src="./js/mysql.js" defer></script>
     <script src="./js/main.js" defer></script>
     <script src="./js/idiomas.js" defer></script>
     <script src="./js/script.js" defer></script>
+    <script src="./js/jugar.js" defer></script>
 </head>
 <body onload="cargarMenu()">
     <main id="pantalla_menu"></main>
     <main id="juego" class="display-juego" style="display: none;"></main>
-    <form action="">
-        
-    </form>
 </body>
 </html>
